# lost-mine-of-thenvoi

./: .env.example  .gitignore  README.md  pyproject.toml
data/: .gitkeep  npcs.json
docs/: architecture.md  demo-checklist.md  platform-setup.md  thenvoi-research-summary.md
docs/presentation/: slides-dungeons-and-dragons.html
scripts/: __init__.py  demo_scenario.py  test_connection.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  dm_agent.py  npc_agent.py  player_agent.py
src/content/: __init__.py  chapter1.py  scenes.py
src/game/: __init__.py  combat.py  models.py  npcs.py  tags.py
src/testing/: __init__.py  fake_tools.py  harness.py  mock_platform.py
src/tools/: __init__.py  dice.py  world_state.py
tests/: __init__.py  conftest.py  test_chapter1.py  test_combat.py  test_config.py  test_dice.py  test_dm_agent.py  test_integration.py  test_main.py  test_npc.py  test_platform_setup.py  test_player_agents.py  test_scenes.py  test_turn_state.py  test_world_state.py
